# ebook2audiobookXTTS

./: Dockerfile  DockerfileUtils  MANIFEST.in  README.md  README_CN.md  app.py  custom_model_ebook2audiobookXTTS.py  custom_model_ebook2audiobookXTTS_gradio.py  custom_model_ebook2audiobookXTTS_with_link_gradio.py  ebook2audiobook.cmd  ebook2audiobook.py  ebook2audiobook.sh  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  tokenizer.py  trash.py
Archive Code/: ebook2audiobook.py  p2a_worker_gpu2.py
Mac Ebook2Audiobook Launcher.app/Contents/: Info.plist
Mac Ebook2Audiobook Launcher.app/Contents/MacOS/: applet
Mac Ebook2Audiobook Launcher.app/Contents/Resources/: applet.rsrc
Mac Ebook2Audiobook Launcher.app/Contents/Resources/Scripts/: main.scpt
Notebooks/: colab_ebook2audiobookxtts.ipynb  kaggle-beta-of-ebook2audiobookxtts-ipynb.ipynb  old_colab_ebook2audiobookxtts.ipynb
Notebooks/Kaggel Archive Code/: LICENSE  kaggle-ebook2audiobook-demo.ipynb  p3.py
audiobooks/: test.m4b
ebook2audiobook/: __init__.py  app.py
ebook2audiobook.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ebook2audiobookXTTS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ebooks/: nano.azw3  test.azw3  test.txt  test1.epub  test2.azw3  test4.txt  test_ak.azw3  test_ar.azw3  test_as.azw3  test_as.txt  test_bg.txt  test_bn.azw3  test_bn.txt  test_ca.txt  test_cs.azw3  test_cs.txt  test_cy.txt  test_da.azw3  test_da.txt  test_de.azw3  test_doi.azw3  test_doi.txt  test_el.azw3  test_el.txt  test_en.azw3  test_en.txt  test_es.azw3  test_es.txt  test_eu.azw3  test_ewe.azw3  test_fa.azw3  test_fa.txt  test_fi.azw3  test_fi.txt  test_fr.azw3  test_fr.txt  test_gn.azw3  test_gn.txt  test_ha.azw3  test_ha.txt  (+81 more)
ebooks/ebook_generator/: generate_ebooks.py
ebooks/tests/: test_ak.txt  test_aka.azw3  test_aka.txt  test_am.azw3  test_am.txt  test_amh.azw3  test_amh.txt  test_ar.azw3  test_ar.txt  test_ara.azw3  test_ara.txt  test_asm.azw3  test_asm.txt  test_bam.azw3  test_bam.txt  test_ben.azw3  test_ben.txt  test_bg.azw3  test_bul.azw3  test_bul.txt  test_ca.azw3  test_cat.azw3  test_cat.txt  test_ceb.azw3  test_ceb.txt  test_ces.azw3  test_ces.txt  test_cy.azw3  test_cym.azw3  test_cym.txt  test_dan.azw3  test_dan.txt  test_de.azw3  test_de.txt  test_deu.azw3  test_deu.txt  test_div.azw3  test_div.txt  test_ell.azw3  test_ell.txt  (+144 more)
legacy/: custom_model_ebook2audiobookXTTS_with_link_gradio.py  install.sh
legacy/v1.0/: Dockerfile  README.md
legacy/v1.0/legacy/: gradio_gui_with_email_and_que.py  install.bat
legacy/v1.0/readme/: README_RU.md
lib/: conf.py  functions.py  lang.py
readme/: README_CN.md  README_RU.md
samples/Supported_language_sample__generated_outputs/: fr.m4b  hu.m4b  nl.m4b  pl.m4b  ru.m4b
samples/Supported_language_sample_texts/: cs.txt  de.txt  pl.txt
tools/: convert_to_gif.sh  generate_ebooks.py
(+28 files in other folders)
