[build-system]
name = "ebook2audiobook"
version = "2.0.0"
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "ebook2audiobook"
version = "2.0.0"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
    "beautifulsoup4",
    "camel-tools",
    "coqui-tts",
    "cutlet",
    "docker",
    "ebooklib",
    "gensim",
    "gradio>=4.44.0",
    "indic-nlp-library",
    "jieba",
    "mecab",
    "mecab-python3",
    "nltk>=3.8.2",
    "pydub",
    "pypinyin",
    "sentencepiece",
    "translate",
    "tqdm",
    "hangul-romanize",
    "unidic",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]
"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"

